force-app/main/default/objects/Account/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <defaultValue>&apos;상담고객&apos;</defaultValue>
    <label>고객유형</label>
    <length>10</length>
    <type>Text</type>
</CustomField>