force-app/main/default/objects/Account/fields/FirstBranch__c.field-meta.xml
<CustomField>
    <fullName>FirstBranch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>첫 구매를 진행한 지점</description>
    <label>인입지점</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Branch__c.Name</field>
            <operation>contains</operation>
            <valueField>$User.Department</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>