force-app/main/default/objects/Account/fields/Last90DaysTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>Last90DaysTotalPrice__c</fullName>
    <label>최근3개월누적금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>