force-app/main/default/objects/Account/fields/LeadContentsCnt__c.field-meta.xml
<CustomField>
    <fullName>LeadContentsCnt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>상담횟수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>