force-app/main/default/objects/Account/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>전화번호 기입</description>
    <label>전화번호</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>