force-app/main/default/objects/Account/fields/SupportTier__c.field-meta.xml
<CustomField>
    <fullName>SupportTier__c</fullName>
    <defaultValue>$CustomMetadata.CustomerTier__mdt.D.MasterLabel</defaultValue>
    <label>고객 등급</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>