force-app/main/default/objects/Account/fields/VoCCount__c.field-meta.xml
<CustomField>
    <fullName>VoCCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>VoC상담 횟수 기록</description>
    <label>VoC상담 횟수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>