force-app/main/default/objects/Account/recordTypes/customer.recordType-meta.xml
<RecordType>
    <fullName>customer</fullName>
    <active>true</active>
    <label>구매 고객</label>
</RecordType>