force-app/main/default/objects/Account/validationRules/Error_Condition_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_Condition_Formula</fullName>
    <active>true</active>
    <description>전화번호 형식 Validation Rule</description>
    <errorConditionFormula>NOT(
    OR(
        REGEX(Phone__c, &quot;^010-\\d{4}-\\d{4}$&quot;),
        REGEX(Phone__c, &quot;^02-\\d{3,4}-\\d{4}$&quot;),
        REGEX(Phone__c, &quot;^0[3-6][0-9]-\\d{3,4}-\\d{4}$&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>전화번호 형식이 올바르지 않습니다. 
휴대폰 번호 형식(010-0000-0000) 또는 일반 전화번호 형식을 사용해주세요.</errorMessage>
</ValidationRule>