force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>AccountType__c</columns>
    <columns>FirstBranch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All 고객</label>
</ListView>