force-app/main/default/objects/Account/listViews/gangnam.listView-meta.xml
<ListView>
    <fullName>gangnam</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>AccountType__c</columns>
    <columns>FirstBranch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstBranch__c</field>
        <operation>equals</operation>
        <value>서울강남점</value>
    </filters>
    <label>서울강남점</label>
</ListView>