force-app/main/default/objects/Account/listViews/gumae.listView-meta.xml
<ListView>
    <fullName>gumae</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>AccountType__c</columns>
    <columns>FirstBranch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountType__c</field>
        <operation>equals</operation>
        <value>구매고객</value>
    </filters>
    <label>구매고객</label>
</ListView>