force-app/main/default/objects/Account/listViews/sangdamlist.listView-meta.xml
<ListView>
    <fullName>sangdamlist</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>AccountType__c</columns>
    <columns>FirstBranch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountType__c</field>
        <operation>equals</operation>
        <value>상담고객</value>
    </filters>
    <label>상담고객</label>
</ListView>