force-app/main/default/objects/Account/listViews/sejongjum.listView-meta.xml
<ListView>
    <fullName>sejongjum</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>FirstBranch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstBranch__c</field>
        <operation>equals</operation>
        <value>세종점</value>
    </filters>
    <label>세종점</label>
</ListView>