force-app/main/default/objects/Account/listViews/ulsanjum.listView-meta.xml
<ListView>
    <fullName>ulsanjum</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>AccountType__c</columns>
    <columns>FirstBranch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstBranch__c</field>
        <operation>equals</operation>
        <value>울산점</value>
    </filters>
    <label>울산점</label>
</ListView>